objects/Boat__c.object
<CustomObject><fields>
        <fullName>BoatType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Boat Type</label>
        <referenceTo>BoatType__c</referenceTo>
        <relationshipLabel>Boats</relationshipLabel>
        <relationshipName>Boats</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Boats</relationshipLabel>
        <relationshipName>Boats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields><fields>
        <fullName>Length__c</fullName>
        <inlineHelpText>In feet</inlineHelpText>
        <label>Length</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Estimated Pric</inlineHelpText>
        <label>Price</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>false</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>false</enableSharing><enableStreamingApi>false</enableStreamingApi><label>Boat</label><nameField>
        <label>Boat Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Boats</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>